[gd_scene load_steps=16 format=2]

[ext_resource path="res://GUI/GUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://Pawn/Player.gd" type="Script" id=2]
[ext_resource path="res://Pawn/PawnMechanics/MovementManager.gd" type="Script" id=3]
[ext_resource path="res://Pawn/PawnMechanics/VisionManager.tscn" type="PackedScene" id=4]
[ext_resource path="res://Pawn/PawnMechanics/HealthManager.tscn" type="PackedScene" id=5]
[ext_resource path="res://Pawn/PawnMechanics/MovementInputManager.gd" type="Script" id=6]
[ext_resource path="res://Camera/PlayerCamera.gd" type="Script" id=7]
[ext_resource path="res://Pawn/PawnMechanics/AttackManager.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/character.png" type="Texture" id=9]
[ext_resource path="res://CoreMechanics/TeleportManager.gd" type="Script" id=13]
[ext_resource path="res://Pawn/StateManager.gd" type="Script" id=14]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16, 22 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 6.0
height = 14.0

[sub_resource type="RayShape2D" id=1]
custom_solver_bias = 1.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 26 )

[node name="Player" type="Node2D"]
script = ExtResource( 2 )

[node name="MainPawn" type="KinematicBody2D" parent="."]
collision_layer = 2
collision_mask = 7
collision/safe_margin = 2.0
script = ExtResource( 3 )

[node name="MovementInputManager" type="Node" parent="MainPawn"]
script = ExtResource( 6 )

[node name="MainCollision" type="StaticBody2D" parent="MainPawn"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape2D" parent="MainPawn/MainCollision"]
shape = SubResource( 4 )

[node name="BodyCollision" type="CollisionShape2D" parent="MainPawn"]
position = Vector2( 0, -5 )
shape = SubResource( 3 )

[node name="RayCollision" type="CollisionShape2D" parent="MainPawn"]
position = Vector2( 0, -2 )
shape = SubResource( 1 )

[node name="GroundRayCastCheck" type="RayCast2D" parent="MainPawn"]
visible = false
enabled = true
cast_to = Vector2( 0, 20 )

[node name="EntityCollision" type="Area2D" parent="MainPawn"]
visible = false
collision_layer = 16
collision_mask = 2147483664

[node name="EntityCollisionShape" type="CollisionShape2D" parent="MainPawn/EntityCollision"]
shape = SubResource( 2 )

[node name="StateManager" type="Node2D" parent="MainPawn"]
script = ExtResource( 14 )

[node name="Sprite" type="Sprite" parent="MainPawn/StateManager"]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 9 )

[node name="HealthManager" parent="MainPawn" instance=ExtResource( 5 )]

[node name="AttackManager" parent="MainPawn" instance=ExtResource( 8 )]

[node name="VisionManager" parent="MainPawn" instance=ExtResource( 4 )]
visible = false

[node name="PlayerCamera" type="Camera2D" parent="."]
z_index = 1
zoom = Vector2( 0.6, 0.6 )
process_mode = 0
script = ExtResource( 7 )

[node name="CanvasLayer" type="CanvasLayer" parent="PlayerCamera"]

[node name="GUI" parent="PlayerCamera/CanvasLayer" instance=ExtResource( 1 )]
light_mask = 0
margin_top = -600.841
margin_right = 512.0
margin_bottom = -0.840942

[node name="TeleportManager" type="Node" parent="."]
script = ExtResource( 13 )
[connection signal="area_entered" from="MainPawn/EntityCollision" to="MainPawn" method="_on_EntityCollision_area_entered"]
[connection signal="area_exited" from="MainPawn/EntityCollision" to="MainPawn" method="_on_EntityCollision_area_exited"]
